SOAJ-142: minor bug fix in response treatment after docker deploy environment. removed z-index for pillars menu.

--- a/ui/themes/default/css/app.css
+++ b/ui/themes/default/css/app.css
@@ -69,8 +69,6 @@ em {
     float:left;
     margin:0 0 0 60px;
     height:35px;
-    position:relative;
-    z-index:10000000;
 }
 
 #header #pillars .one-pillar{
